# beginner_tutorials

./: CMakeLists.txt  README.md  package.xml
launch/: launch.yaml  rosbag_recorder.py
results/: cppcheck.txt  cppcheck_result.txt  cpplint.txt  cpplint_result.txt
src/: publisher.cpp  subscriber.cpp
srv/: CustomMessage.srv
test/: main.cpp  test_publisher.cpp
